# SR2-Flat-Shading

./: CMakeLists.txt  README.md
src/: color.cpp  color.h  fragment.h  framebuffer.cpp  framebuffer.h  line.h  loadModel.h  main.cpp  shaders.h  triangle.h
